# poc-dirac-job-matchmaking

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  pixi.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml
analysis/: README.md  explore_distributions.ipynb  extract_distributions.sh
benchmark/: data_generator.py  generate_db.py  locustfile.py  run_all_benchmarks.sh  run_benchmark.ps1  run_benchmark.sh  run_distributed.sh  verify_consistency.py
benchmark/py_redis/: data_loader.py
benchmark/results/: Locust_2026-04-22-16h14_locustfile.py_requests.csv  Locust_2026-04-22-18h58_locustfile.py_requests.csv  Locust_2026-04-23-10h12_locustfile.py_requests_25_user_spawn.csv  Locust_2026-04-23-10h23_locustfile.py_requests_50_user_spawn.csv  Locust_2026-04-23-10h50_locustfile.py_requests_75_user_spawn.csv  Locust_2026-04-23-11h07_locustfile.py_requests_100_user_spawn.csv  Locust_2026-04-23-11h25_locustfile.py_requests_10_user_spawn.csv  Locust_2026-04-23-11h53_locustfile.py_requests_1_user_spawn.csv  Locust_2026-05-04-10h28_locustfile.py_requests_default_broken.csv  Locust_2026-05-04-10h52_locustfile.py_requests_default_broken.csv  Locust_2026-05-04-14h33_locustfile.py_requests_default_good.csv  Locust_2026-05-04-15h05_locustfile.py_requests_default_good.csv  Locust_2026-05-05-16h16_locustfile.py_requests_default_5_workers_500_candidates.csv  Locust_2026-05-05-16h40_locustfile.py_requests_default_10_workers_100_candidates.csv  Locust_2026-05-05-17h07_locustfile.py_requests_default_10_workers_50_candidates.csv  Locust_2026-05-05-17h23_locustfile.py_requests_default_10_workers_100_candidates.csv  Locust_2026-05-06-10h28_locustfile.py_requests_default_5_workers_10_candidates.csv  Locust_2026-05-06-11h12_locustfile.py_requests_default_5_workers_100_candidates.csv  Locust_2026-05-06-12h50_locustfile.py_requests_default_5_workers_1000_users.csv  Locust_2026-05-06-13h09_locustfile.py_requests_default_5_workers_1000_users.csv  locust_2026-05-12_17-32-06_jobs-10000000_nodes-20000_cc-100_u-100_r-50_t-900_stats.csv  locust_2026-05-12_17-32-06_jobs-10000000_nodes-20000_cc-100_u-100_r-50_t-900_stats_history.csv  locust_2026-05-13_14-27-03_mm-python_jobs-10000000_nodes-20000_cc-500_u-100_r-50_t-900_w-5_stats.csv  locust_2026-05-13_14-27-03_mm-python_jobs-10000000_nodes-20000_cc-500_u-100_r-50_t-900_w-5_stats_history.csv  locust_2026-05-13_15-03-20_mm-alt_a_jobs-10000000_nodes-20000_cc-500_u-100_r-50_t-900_w-5_stats.csv  locust_2026-05-13_15-03-20_mm-alt_a_jobs-10000000_nodes-20000_cc-500_u-100_r-50_t-900_w-5_stats_history.csv  locust_2026-05-18_16-48-33_mm-python_redis_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_stats.csv  locust_2026-05-18_16-48-33_mm-python_redis_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_stats_history.csv  locust_2026-05-18_17-41-42_mm-python_redis_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_stats.csv  locust_2026-05-18_17-41-42_mm-python_redis_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_stats_history.csv  locust_2026-05-18_17-49-58_mm-python_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_stats.csv  locust_2026-05-18_17-49-58_mm-python_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_stats_history.csv  locust_2026-05-18_18-07-28_mm-python_redis_jobs-1000000_nodes-50000_cc-500_u-100_r-50_t-15m_w-5_stats_history.csv  locust_2026-05-20_11-45-19_mm-python_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_w-5_stats.csv  locust_2026-05-20_11-45-19_mm-python_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_w-5_stats_history.csv  locust_2026-05-20_13-21-46_mm-python_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_w-5_stats.csv  locust_2026-05-20_13-21-46_mm-python_jobs-10000000_nodes-50000_cc-500_u-100_r-50_t-15m_w-5_stats_history.csv  (+72 more)
config/: __init__.py  scheduling.yaml
docs/: data_model_design.md  schema_design.md
lua/alt-a/: match_making.lua
matchmaking/: cli.py
matchmaking/cli/: match_making.py  (+2 more)
tests/: README.md  conftest.py  test_cli.py  test_models.py  test_valid_pilot.py
(+195 files in other folders)
