[project]
authors = [{name = "ychabani", email = "yan.chabanis@cern.ch"}]
dependencies = []
name = "poc-dirac-job-matchmaking"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
poc_dirac_job_matchmaking = { path = ".", editable = true }

[tool.pixi.tasks]
lint = "ruff check . && ruff format --check ."
test = "pytest --cov=src --cov-report=xml tests/"
pre-commit = "pre-commit"
pc = "pre-commit run --all-files"
valid = "src/core/valid_pilot.py"

[tool.ruff]
line-length = 120
extend-exclude = ["*.md", "*.yaml", "*.yml", ".pixi", "analysis"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "I",   # isort
  "PLE", # pylint errors
  "D",   # pydocstyle
  # "UP",   # pyUpgrade
  "FLY", # flynt
  "DTZ", # flake8-datetimez
  "S",   # flake8-bandit
  "N",   # pep8-naming
]
ignore = [
  "B905",
  "B006",
  "S101", # bandit: use of assert https://docs.astral.sh/ruff/rules/assert/
  # TODO: Maybe enable these
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D203",
  "D205",
  "D213",
  "D413"
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
