[project]
authors = [{name = "ychabani", email = "yan.chabanis@cern.ch"}]
dependencies = [
    "pydantic >= 2.12",
    "pyyaml >= 6",
]
name = "matchmaking"
requires-python = ">=3.11,<3.12"
version = "0.1.0"

[project.scripts]
matchmaking = "matchmaking.cli.match_making:main"
scheduler = "matchmaking.cli.scheduler:main"
generate_db = "benchmark.generate_db:main"
seed_redis_alt_a = "matchmaking.core.lua.alt_a.seed_redis:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 120
extend-exclude = ["*.md", "*.yaml", "*.yml", ".pixi", "analysis"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "I",   # isort
  "PLE", # pylint errors
  "D",   # pydocstyle
  # "UP",   # pyUpgrade
  "FLY", # flynt
  "DTZ", # flake8-datetimez
  "S",   # flake8-bandit
  "N",   # pep8-naming
]
ignore = [
  "B905",
  "B006",
  "S101", # bandit: use of assert https://docs.astral.sh/ruff/rules/assert/
  # TODO: Maybe enable these
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D203",
  "D205",
  "D213",
  "D413"
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s [%(filename)s in %(funcName)s on line %(lineno)d] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
]
